add natours project

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             <div class="chip">CSS3</div>
             <div class="chip">JavaScript</div>
             <div class="chip">Git</div>
-            <div class="chip">React</div>
-            <div class="chip">WordPress</div>
-            <div class="chip">BootStrap</div>
+            <div class="chip">ReactJS</div>
+            <!-- <div class="chip">WordPress</div>
+            <div class="chip">BootStrap</div> -->
           </div>
         </div>
       </div>
@@ -204,7 +204,16 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="" />
+              <div
+                class="portfolio-item-img-container"
+                style="background-color: #f7f7f7"
+              >
+                <img
+                  class="img-fluid portfolio-item-img"
+                  src="img/portfolio/natours.png"
+                  alt=""
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -359,11 +368,9 @@
           <div class="modal-body text-center">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-12 col-md-10 col-lg-8">
                   <!-- Portfolio Modal - Title -->
-                  <h2
-                    class="portfolio-modal-title text-uppercase mb-0"
-                  >
+                  <h2 class="portfolio-modal-title text-uppercase mb-0">
                     Hacker News Reader
                   </h2>
                   <!-- Icon Divider -->
@@ -415,7 +422,7 @@
                     target="_blank"
                     ><button class="btn btn-primary">
                       <i class="fas fa-eye"></i>
-                      Live
+                      Demo
                     </button></a
                   >
                 </div>
@@ -450,11 +457,9 @@
           <div class="modal-body text-center">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-12 col-md-10 col-lg-8">
                   <!-- Portfolio Modal - Title -->
-                  <h2
-                    class="portfolio-modal-title text-uppercase mb-0"
-                  >
+                  <h2 class="portfolio-modal-title text-uppercase mb-0">
                     Trello Clone
                   </h2>
                   <!-- Icon Divider -->
@@ -546,12 +551,10 @@
           <div class="modal-body text-center">
             <div class="container">
               <div class="row justify-content-center">
-                <div class="col-lg-8">
+                <div class="col-12 col-md-10 col-lg-8">
                   <!-- Portfolio Modal - Title -->
-                  <h2
-                    class="portfolio-modal-title text-uppercase mb-0"
-                  >
-                    Submarine
+                  <h2 class="portfolio-modal-title text-uppercase mb-0">
+                    Natours
                   </h2>
                   <!-- Icon Divider -->
                   <div class="divider-custom">
@@ -560,21 +563,43 @@
                   <!-- Portfolio Modal - Image -->
                   <img
                     class="img-fluid rounded mb-5"
-                    src="img/portfolio/submarine.png"
+                    src="img/portfolio/natours.png"
                     alt=""
                   />
                   <!-- Portfolio Modal - Text -->
                   <p class="mb-5">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Mollitia neque assumenda ipsam nihil, molestias magnam,
-                    recusandae quos quis inventore quisquam velit asperiores,
-                    vitae? Reprehenderit soluta, eos quod consequuntur itaque.
-                    Nam.
+                    Natours is a landing page for a imaginary tourism company
+                    using SCSS with various creative CSS animations. This
+                    project is build by me during the the advanced CSS Udemy
+                    course of Jonas Schmedtmann. <br /><br />
+                    Through the project, I learned not only to write, compile
+                    and get used to SCSS and animations; but more importantly
+                    how to structure a scalable project, which is essential in
+                    any real working environment.
                   </p>
-                  <button class="btn btn-primary" href="#" data-dismiss="modal">
-                    <i class="fas fa-times fa-fw"></i>
-                    Close Window
-                  </button>
+
+                  <div class="chip-container">
+                    <div class="chip">HTML5</div>
+                    <div class="chip">BEM</div>
+                    <div class="chip">CSS3</div>
+                    <div class="chip">SCSS</div>
+                  </div>
+                  <br /><br />
+                  <a
+                    href="https://github.com/khuctrang/natours"
+                    target="_blank"
+                  >
+                    <button class="btn btn-primary">
+                      <i class="fas fa-code"></i>
+                      Code
+                    </button>
+                  </a>
+                  <a href="https://khuctrang.github.com/natours" target="_blank"
+                    ><button class="btn btn-primary">
+                      <i class="fas fa-eye"></i>
+                      Demo
+                    </button></a
+                  >
                 </div>
               </div>
             </div>
