--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     <!-- https://www.linkedin.com/in/casey-trang-khuc-804966148/ -->
     <section class="sticky-icon">
-      <a href="#" target="_blank" class="Linkedin"
+      <a href="https://www.linkedin.com/in/casey-trang-khuc-804966148/" target="_blank" class="Linkedin"
         ><i class="fab fa-linkedin"></i> Linkedin
       </a>
       <a href="https://github.com/khuctrang" target="_blank" class="Github"
@@ -303,7 +303,7 @@
         ><i class="fas fa-envelope"></i> Email
       </a>
       <a
-        href="https://www.linkedin.com/in/casey-trang-khuc-804966148/"
+        href="https://drive.google.com/file/d/1EYgpbYPCXH1sQEgQU2nsh0ymVYXATcBV/view?usp=sharing"
         target="_blank"
         class="Resume"
         ><i class="fas fa-id-badge"></i> Resume
