--- a/index.html
+++ b/index.html
@@ -260,9 +260,10 @@
         <div class="text-center mt-4">
           <a
             class="btn btn-outline-light"
-            href="https://startbootstrap.com/themes/freelancer/"
+            href="https://drive.google.com/file/d/1EYgpbYPCXH1sQEgQU2nsh0ymVYXATcBV/view?usp=sharing"
+            target="_blank"
           >
-            <i class="fas fa-download mr-2"></i>
+            <!--  <i class="fas fa-download mr-2"></i> -->
             Resume
           </a>
         </div>
@@ -293,7 +294,10 @@
 
     <!-- https://www.linkedin.com/in/casey-trang-khuc-804966148/ -->
     <section class="sticky-icon">
-      <a href="https://www.linkedin.com/in/casey-trang-khuc-804966148/" target="_blank" class="Linkedin"
+      <a
+        href="https://www.linkedin.com/in/casey-trang-khuc-804966148/"
+        target="_blank"
+        class="Linkedin"
         ><i class="fab fa-linkedin"></i> Linkedin
       </a>
       <a href="https://github.com/khuctrang" target="_blank" class="Github"
