fix: update demo link due to deprecated GitHub Pages feature

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     Code
                   </button>
                 </a>
-                <a href="https://khuctrang.github.com/news-reader" target="_blank">
+                <a href="https://khuctrang.github.io/news-reader" target="_blank">
                   <button class="btn btn-primary">
                     <i class="fas fa-eye"></i>
                     Demo
@@ -419,7 +419,7 @@
                     Code
                   </button>
                 </a>
-                <a href="https://khuctrang.github.com/trello-clone" target="_blank">
+                <a href="https://khuctrang.github.io/trello-clone" target="_blank">
                   <button class="btn btn-primary">
                     <i class="fas fa-eye"></i>
                     Demo
@@ -481,7 +481,7 @@
                     Code
                   </button>
                 </a>
-                <a href="https://khuctrang.github.com/natours" target="_blank">
+                <a href="https://khuctrang.github.io/natours" target="_blank">
                   <button class="btn btn-primary">
                     <i class="fas fa-eye"></i>
                     Demo
